[gd_scene load_steps=4 format=3 uid="uid://d13fd6ik8i4xq"]

[ext_resource type="Texture2D" uid="uid://dq3qegqi72o6a" path="res://assets/player/sag_arrow.png" id="1_rufgg"]
[ext_resource type="Script" uid="uid://dpgvx26wmfrck" path="res://script/arrow.gd" id="1_yspra"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rufgg"]
radius = 2.0
height = 22.0

[node name="Arrow" type="Area2D"]
top_level = true
rotation = 0.6007099
script = ExtResource("1_yspra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_rufgg")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 2.3561945
texture = ExtResource("1_rufgg")

[node name="DestroySelfTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroySelfTimer" to="." method="_on_destroy_self_timer_timeout"]
